--- a/.github/workflows/trigger-jenkins.yml
+++ b/.github/workflows/trigger-jenkins.yml
@@ -12,4 +12,4 @@ jobs:
         run: |
           curl -sS -X POST \
             -u "${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_TOKEN }}" \
-            "${{ secrets.JENKINS_URL }}/job/your-job-name/build?token=${{ secrets.JENKINS_JOB_TOKEN }}"
+            "${{ secrets.JENKINS_URL }}/job/vc-git-poc/build?token=${{ secrets.JENKINS_JOB_TOKEN }}"
